# Factor-Lake

./: .env.example  .gitattributes  .gitignore  404.html  README.md  folder_structure.txt  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  target_vol.py
.streamlit/: secrets.toml.example
Bandit & Safety/: index.html
CONTRIBUTING/: index.html
DEPLOYMENT/: index.html
DEV_ONBOARDING/: index.html
DOCS/: Bandit & Safety.md  CONTRIBUTING.md  DEPLOYMENT.md  DEV_ONBOARDING.md  DOCS_CONTRIBUTOR_GUIDE.md  FACTOR_LAKE_USER_GUIDE.md  STREAMLIT_ADMIN_GUIDE.md  STREAMLIT_STYLING_GUIDE.md  SUPABASE_MAINTENANCE_GUIDE.md  SUPABASE_SETUP.md  SUPABASE_UPLAOD_TOOL.md  SUPABASE_UPLOAD_TOOL.md  gen_ref_pages.py  index.md
DOCS_CONTRIBUTOR_GUIDE/: index.html
FACTOR_LAKE_USER_GUIDE/: index.html
IntegrationTests/: conftest.py  test_known_good.py  test_multiple_factors.py  test_supabase_integration.py
REORGANIZATION_SUMMARY/: index.html
STREAMLIT_ADMIN_GUIDE/: index.html
STREAMLIT_STYLING_GUIDE/: index.html
SUPABASE_MAINTENANCE_GUIDE/: index.html
SUPABASE_SETUP/: index.html
SUPABASE_UPLOAD_TOOL/: index.html
UnitTests/: test_calculate_holdings.py  test_delisting_strategy.py  test_factors.py  test_known_good.py  test_market_object.py  test_multiple_factors.py  test_supabase_integration.py
Visualizations/: __init__.py  portfolio_growth_plot.py  top_bottom_portfolio_plot.py
app/: streamlit_app.py  streamlit_config.py  streamlit_css.py  streamlit_utils.py
scripts/: archive_supabase_tables.py  bandit_to_sarif.py  (+2 more)
(+89 files in other folders)
